# urban-inspection-rag

./: .api.pid  .env  .worker.pid  API修复完成.md  ARCHITECTURE.md  NEXT_STEPS.md  README.md  README_ASYNC.md  START_HERE.md  api.py  api_async.py  api_async_backup.py  fastapi_api.py  fastapi_run.py  install_redis.sh  main.py  pyproject.toml  requirements.txt  requirements_fastapi.txt  restart_async_system.sh  run.py  start_async_system.sh  start_worker.py  stop_async_system.sh  test_async_api.py  test_multi_key.py  test_query_async.py  使用5000端口说明.md  前端两步调用说明.md  多密钥方案总结.md  异步系统实施总结.md  检索问题修复说明.md  模型预加载优化说明.md
config/: config.py
deploy/: Dockerfile  build_executable.py  deploy.bat  deploy.sh  docker-compose.yml  env.example  部署指南.md
docs/: chunking_comparison.md  住房维度指标AI.xlsx  小区维度指标AI.xlsx  技术流程.md  测试环境与过程设计.md
locustTest/: convert_image_to_base64.py  debug_query.py  locustfile.py  locustfile_analyze_only.py  locustfile_flow.py  locustfile_flow_only.py  locustfile_query_only.py  test_api_manual.py  test_flow.sh  test_flow_manual.py  test_image_base64.txt
logs/: final_search_result_20250729_205306.json  final_search_result_20250729_205459.json  final_search_result_20250729_205910.json  final_search_result_20250729_210037.json  final_search_result_20250729_210123.json  final_search_result_20250729_210243.json  final_search_result_20250729_215914.json  final_search_result_20250729_220124.json  final_search_result_20250729_220315.json  final_search_result_20250729_220517.json  final_search_result_20250729_220948.json  final_search_result_20250729_221231.json  (+1086 more)
(+95 files in other folders)
